# ImageClustering

./: .gitignore  README.md  eda.ipynb  initial_data.ipynb  pyproject.toml
articles/: README.md
data/: README.md
data/r18_features/: labels.npy  labels_samenum.npy
docs/: clustering_docs.md  data_docs.md  eda_docs.md
output/: agglomerative_labels.npy  agglomerative_samenum_labels.npy  dbscan_labels.npy  dbscan_samenum_labels.npy  kmeans_labels.npy  kmeans_samenum_labels.npy  spectral_labels.npy  spectral_samenum_labels.npy
src/:  clustering_same_no_samples.ipynb  calculate_metrics.py  cluster_kmeans.ipynb  clustering.py  first.ipynb  test.ipynb
src/art_clustering/clustering/: clustering_Hunor.ipynb
src/art_clustering/data_loaders/: __init__.py  again.py
